# openrgb-rs

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: clippy.yml  coverage.yml  doc.yml  release.yml  tests.yml  warnings.yml
.run/: check.run.xml  fmt.run.xml  test.run.xml
examples/: connect.rs  controllers.rs  profiles.rs
src/: client.rs  error.rs  lib.rs  protocol.rs  tests.rs
src/data/: color.rs  color_mode.rs  controller.rs  device_type.rs  direction.rs  led.rs  mod.rs  mode.rs  mode_flag.rs  packet.rs  primitive.rs  string.rs  tuple.rs  vec.rs  zone.rs  zone_type.rs
