[package]
name = "openrgb"
version = "0.1.1"
edition = "2021"
rust-version = "1.56"
authors = ["Julien Nicoulaud <julien.nicoulaud@gmail.com>"]
description = "OpenRGB SDK client"
documentation = "https://docs.rs/openrgb"
homepage = "https://github.com/nicoulaj/openrgb-rs"
repository = "https://github.com/nicoulaj/openrgb-rs"
license = "GPL-2.0"
keywords = ["RGB", "LED", "gaming"]
categories = ["network-programming", "game-development"]

[dependencies]
array2d = "0.2.1"
async-trait = "0.1.53"
enum-primitive-derive = "0.2.2"
flagset = "0.4.3"
log = "0.4.17"
num-traits = "0.2.15"
rgb = "0.8.32"
thiserror = "1.0.31"
tokio = { version = "1.18.2", default-features = false, features = ["rt-multi-thread", "net", "sync", "io-util"] }

[dev-dependencies]
simplelog = "0.12.0"
tokio-test = "0.4.2"
tokio = { version = "1.18.2", default-features = false, features = ["macros"] }
